@@ -36,7 +36,7 @@ import org.mockito.Captor;
 import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
 
-import java.util.Arrays;
+import java.util.List;
 
 /** Unit tests for {@link MakeBeforeBreakManager}. */
 @SmallTest
@@ -63,12 +63,14 @@ public class MakeBeforeBreakManagerTest extends WifiBaseTest {
         MockitoAnnotations.initMocks(this);
 
         when(mActiveModeWarden.isStaStaConcurrencySupportedForMbb()).thenReturn(true);
-        when(mNewPrimaryCmm.getRole()).thenReturn(ROLE_CLIENT_SECONDARY_TRANSIENT);
         when(mFrameworkFacade.getSettingsWorkSource(mContext)).thenReturn(mSettingsWorkSource);
-        when(mActiveModeWarden.getPrimaryClientModeManagerNullable()).thenReturn(mOldPrimaryCmm);
+
         when(mOldPrimaryCmm.getRole()).thenReturn(ROLE_CLIENT_PRIMARY);
+        when(mNewPrimaryCmm.getRole()).thenReturn(ROLE_CLIENT_SECONDARY_TRANSIENT);
+
+        when(mActiveModeWarden.getPrimaryClientModeManagerNullable()).thenReturn(mOldPrimaryCmm);
         when(mActiveModeWarden.getClientModeManagersInRoles(ROLE_CLIENT_SECONDARY_TRANSIENT))
-                .thenReturn(Arrays.asList(mNewPrimaryCmm));
+                .thenReturn(List.of(mNewPrimaryCmm));
 
         mMbbManager = new MakeBeforeBreakManager(mActiveModeWarden, mFrameworkFacade, mContext,
                 mCmiMonitor, mBroadcastQueue, mWifiMetrics);
@@ -115,7 +117,7 @@ public class MakeBeforeBreakManagerTest extends WifiBaseTest {
 
         when(mOldPrimaryCmm.getRole()).thenReturn(ROLE_CLIENT_SECONDARY_TRANSIENT);
         when(mActiveModeWarden.getClientModeManagersInRoles(ROLE_CLIENT_SECONDARY_TRANSIENT))
-                .thenReturn(Arrays.asList(mNewPrimaryCmm, mOldPrimaryCmm));
+                .thenReturn(List.of(mNewPrimaryCmm, mOldPrimaryCmm));
         mModeChangeCallbackCaptor.getValue().onActiveModeManagerRoleChanged(mOldPrimaryCmm);
 
         verify(mNewPrimaryCmm).setRole(ROLE_CLIENT_PRIMARY, mSettingsWorkSource);
@@ -133,7 +135,7 @@ public class MakeBeforeBreakManagerTest extends WifiBaseTest {
         when(mNewPrimaryCmm.getRole()).thenReturn(ROLE_CLIENT_PRIMARY);
         when(mOldPrimaryCmm.getRole()).thenReturn(ROLE_CLIENT_SECONDARY_TRANSIENT);
         when(mActiveModeWarden.getClientModeManagersInRoles(ROLE_CLIENT_SECONDARY_TRANSIENT))
-                .thenReturn(Arrays.asList(mOldPrimaryCmm));
+                .thenReturn(List.of(mOldPrimaryCmm));
         mModeChangeCallbackCaptor.getValue().onActiveModeManagerRoleChanged(mOldPrimaryCmm);
 
         // still only called once
@@ -150,7 +152,7 @@ public class MakeBeforeBreakManagerTest extends WifiBaseTest {
 
         when(mOldPrimaryCmm.getRole()).thenReturn(ROLE_CLIENT_SECONDARY_TRANSIENT);
         when(mActiveModeWarden.getClientModeManagersInRoles(ROLE_CLIENT_SECONDARY_TRANSIENT))
-                .thenReturn(Arrays.asList(mNewPrimaryCmm, mOldPrimaryCmm));
+                .thenReturn(List.of(mNewPrimaryCmm, mOldPrimaryCmm));
         mModeChangeCallbackCaptor.getValue().onActiveModeManagerRoleChanged(mUnrelatedCmm);
 
         verify(mUnrelatedCmm, never()).setRole(any(), any());
@@ -162,7 +164,7 @@ public class MakeBeforeBreakManagerTest extends WifiBaseTest {
     public void modeChanged_noMakeBeforeBreak_noOp() {
         when(mOldPrimaryCmm.getRole()).thenReturn(ROLE_CLIENT_SECONDARY_TRANSIENT);
         when(mActiveModeWarden.getClientModeManagersInRoles(ROLE_CLIENT_SECONDARY_TRANSIENT))
-                .thenReturn(Arrays.asList(mNewPrimaryCmm, mOldPrimaryCmm));
+                .thenReturn(List.of(mNewPrimaryCmm, mOldPrimaryCmm));
         mModeChangeCallbackCaptor.getValue().onActiveModeManagerRoleChanged(mOldPrimaryCmm);
 
         verify(mOldPrimaryCmm, never()).setRole(any(), any());
@@ -179,7 +181,7 @@ public class MakeBeforeBreakManagerTest extends WifiBaseTest {
         // didn't become SECONDARY_TRANSIENT
         when(mOldPrimaryCmm.getRole()).thenReturn(ROLE_CLIENT_SECONDARY_LONG_LIVED);
         when(mActiveModeWarden.getClientModeManagersInRoles(ROLE_CLIENT_SECONDARY_TRANSIENT))
-                .thenReturn(Arrays.asList(mNewPrimaryCmm));
+                .thenReturn(List.of(mNewPrimaryCmm));
         mModeChangeCallbackCaptor.getValue().onActiveModeManagerRoleChanged(mOldPrimaryCmm);
 
         // no-op, abort MBB
@@ -189,7 +191,7 @@ public class MakeBeforeBreakManagerTest extends WifiBaseTest {
         // became SECONDARY_TRANSIENT
         when(mOldPrimaryCmm.getRole()).thenReturn(ROLE_CLIENT_SECONDARY_TRANSIENT);
         when(mActiveModeWarden.getClientModeManagersInRoles(ROLE_CLIENT_SECONDARY_TRANSIENT))
-                .thenReturn(Arrays.asList(mNewPrimaryCmm, mOldPrimaryCmm));
+                .thenReturn(List.of(mNewPrimaryCmm, mOldPrimaryCmm));
         mModeChangeCallbackCaptor.getValue().onActiveModeManagerRoleChanged(mOldPrimaryCmm);
 
         // but since aborted, still no-op
@@ -208,7 +210,7 @@ public class MakeBeforeBreakManagerTest extends WifiBaseTest {
         // new primary's role became something else
         when(mNewPrimaryCmm.getRole()).thenReturn(ROLE_CLIENT_SECONDARY_LONG_LIVED);
         when(mActiveModeWarden.getClientModeManagersInRoles(ROLE_CLIENT_SECONDARY_TRANSIENT))
-                .thenReturn(Arrays.asList(mOldPrimaryCmm));
+                .thenReturn(List.of(mOldPrimaryCmm));
         mModeChangeCallbackCaptor.getValue().onActiveModeManagerRoleChanged(mOldPrimaryCmm);
 
         // no-op, abort MBB
@@ -219,7 +221,7 @@ public class MakeBeforeBreakManagerTest extends WifiBaseTest {
         when(mOldPrimaryCmm.getRole()).thenReturn(ROLE_CLIENT_SECONDARY_TRANSIENT);
         when(mNewPrimaryCmm.getRole()).thenReturn(ROLE_CLIENT_SECONDARY_TRANSIENT);
         when(mActiveModeWarden.getClientModeManagersInRoles(ROLE_CLIENT_SECONDARY_TRANSIENT))
-                .thenReturn(Arrays.asList(mNewPrimaryCmm, mOldPrimaryCmm));
+                .thenReturn(List.of(mNewPrimaryCmm, mOldPrimaryCmm));
         mModeChangeCallbackCaptor.getValue().onActiveModeManagerRoleChanged(mOldPrimaryCmm);
 
         // but since aborted, still no-op
@@ -231,12 +233,32 @@ public class MakeBeforeBreakManagerTest extends WifiBaseTest {
     public void recovery() {
         when(mOldPrimaryCmm.getRole()).thenReturn(ROLE_CLIENT_SECONDARY_TRANSIENT);
         when(mActiveModeWarden.getClientModeManagersInRoles(ROLE_CLIENT_SECONDARY_TRANSIENT))
-                .thenReturn(Arrays.asList(mNewPrimaryCmm, mOldPrimaryCmm));
+                .thenReturn(List.of(mNewPrimaryCmm, mOldPrimaryCmm));
         when(mActiveModeWarden.getPrimaryClientModeManagerNullable()).thenReturn(null);
         mModeChangeCallbackCaptor.getValue().onActiveModeManagerRoleChanged(mOldPrimaryCmm);
 
         verify(mNewPrimaryCmm).setRole(ROLE_CLIENT_PRIMARY, mSettingsWorkSource);
         verify(mOldPrimaryCmm).stop();
+    }
+
+    @Test
+    public void captivePortalDetected_disconnectOldPrimary_makeCaptivePortalPrimary() {
+        // captive portal network detected on new primary CMM
+        mCmiListenerCaptor.getValue().onCaptivePortalDetected(mNewPrimaryCmm);
+
+        // we should stop the old primary
+        verify(mOldPrimaryCmm).stop();
+
+        // old primary destroyed
+        when(mOldPrimaryCmm.getRole()).thenReturn(null);
+        // currently no primary
+        when(mActiveModeWarden.getPrimaryClientModeManagerNullable()).thenReturn(null);
+
+        // trigger old primary removed callback
+        mModeChangeCallbackCaptor.getValue().onActiveModeManagerRemoved(mOldPrimaryCmm);
+
+        // ensure we make the captive portal network primary
+        verify(mNewPrimaryCmm).setRole(ROLE_CLIENT_PRIMARY, mSettingsWorkSource);
     }
 
     @Test
